# static-text

./: .codeclimate.yml  .travis.yml  CHANGELOG.md  HACKING.org  LICENSE  README.md  README.org  package.yaml  sext.cabal  stack-7.10.yaml  stack-previous.yaml  stack.yaml
.github/workflows/: ci.yaml
src/Data/: Sext.hs  StaticText.hs
src/Data/Sext/: Class.hs  TH.hs
src/Data/StaticText/: Class.hs  TH.hs
tests/: Main.hs
