name:                sext
version:             0.1.0.0
synopsis:            Text with statically encoded length
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Sext
  -- other-modules:       
  build-depends:
        base >=4.7 && <4.8,
        text >=1.1 && <1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
 