name:                sext
version:             0.1.0.0
synopsis:            Lists, Texts and ByteStrings with type-encoded length
-- description:
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
-- copyright:
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.8.3

flag text
  description: Build interface for Text
  default: True

flag bytestring
  description: Build interface for ByteString
  default: True

library
  exposed-modules:
    Data.Sext,
    Data.Sext.TH

  other-modules:
    Data.Sext.Class

  build-depends:
    base             >=4.7 && <4.8,
    template-haskell

  if flag(bytestring)
    build-depends:
      bytestring     >=0.10 && <0.11

  if flag(text)
    build-depends:
      text           >=1.1 && <1.2

  ghc-options: -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
